--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header {
     font-family: 'HelveticaNeueLT-HeavyCond', sans-serif;
     font-size: 48px; /* Increased from 24px to 48px */
     font-weight: normal;
-    line-height: .9;
+    line-height: 1;
 }
 
 /* Text Section */
@@ -70,7 +70,7 @@ header {
     display: block;
     background-color: #5DCB5D;
     width: 100vw; /* Change to viewport width */
-    height: 300px;
+    height: 240px; /* Increased from 220px to 240px to extend down a bit more */
     position: absolute;
     left: 50%; /* Center it */
     transform: translateX(-50%); /* Center it properly */
@@ -84,7 +84,6 @@ header {
     font-weight: normal;
     line-height: .7;
     color: white; /* White text */
-    padding: 5px 0;
     position: relative;
     z-index: 1; /* Make sure text is above the background */
 }
@@ -97,19 +96,23 @@ header {
     padding: 5px 0;
     position: relative;
     z-index: 1; /* Make sure text is above the background */
+    text-decoration: underline; /* Add underline to phone number */
+    display: block; /* Make it a block element like before */
 }
 
 .opt {
     font-family: 'HelveticaNeueLT-HeavyCond', sans-serif;
     font-size: 48px; /* Increased from 24px to 48px */
     font-weight: normal;
+    padding: 16px 0 0 0;
 }
 
 .in {
     font-family: 'HelveticaNeueLT-HeavyCond', sans-serif;
     font-size: 400px; /* Changed from 80px to 400px */
     font-weight: normal;
-    line-height: 1;
+    line-height: .7;
+    padding: 0 0 32px 0;
 }
 
 /* Releases Section */
@@ -259,6 +262,7 @@ header {
     line-height: 1;
     margin-top: 10px;
     cursor: pointer;
+    text-decoration: underline; /* Add underline to ENTER */
 }
 
 .interactive-section {
@@ -415,4 +419,4 @@ footer {
   white-space: pre-wrap; /* Add this to allow text wrapping */
   overflow-wrap: break-word; /* Add this to enable text wrapping */
   word-wrap: break-word; /* For older browsers */
-} 
+}
