--- a/styles.css
+++ b/styles.css
@@ -181,12 +181,11 @@ header {
     background-color: #5DCB5D;
     color: white;
     text-align: center;
-    padding: 15px 0;
+    padding: 8px 0 24px;
     position: relative;
     width: 100vw;
     left: 50%;
     transform: translateX(-50%);
-    margin: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -220,7 +219,7 @@ header {
 .email-input-container {
     position: relative;
     display: inline-block;
-    width: 90%; /* Changed from 80% to 90% */
+    width: 96%; /* Changed from 80% to 90% */
     max-width: 100%; /* Changed from 300px to 100% */
 }
 
@@ -275,26 +274,36 @@ header {
 /* Footer */
 footer {
     background-color: white;
-    padding: 20px 0;
+    padding: 80px 0;
     text-align: center;
 }
 
 .footer-links {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .footer-links a {
     font-family: 'HelveticaNeueLT-HeavyCond', sans-serif;
     color: black;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 32px; /* Changed from 48px to 32px */
     font-weight: normal;
     margin: 0 10px;
+    display: block; /* Make links stack vertically */
 }
 
 .copyright {
     font-family: 'HelveticaNeueLT-HeavyCond', sans-serif;
-    font-size: 14px;
+    font-size: 32px; /* Changed from 48px to 32px */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -10px;
+}
+
+.nn-logo {
+    height: 32px; /* Changed from 48px to 32px to match the font size */
+    margin: 0 5px;
 }
 
 /* Update the enter text size to 145px */
